--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <main class="main">
       @include('partials/hero.html')
       @include('partials/popular-categories.html')
+      @include('partials/slider-main.html')
 
     </main>
     @include('partials/footer.html')
