--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
     </a>
   </div>
   <div class="container header__container">
+
     <nav class="menu nav" title="">
       <div class="nav__items header--mod">
 
@@ -89,6 +90,7 @@
         <li class="nav__item"><a href="contacts.html" class="nav__link">Горящие туры</a></li>
       </ul>
     </nav>
+
     <div class="overlay"></div>
     <a href="tel:7405999999" class="account__link account__link--mobile contact-link contact-link--call">
       <span class="contact-link__value--mod">8(800) 999-9999</span>
@@ -104,11 +106,11 @@
     <main class="main">
       <section class="hero" id="hero">
   <div class="container hero__container">
-    <h2 class="hero__title">
+    <h2 class="main-title title--center">
       Выбирайте и покупайте туры онлайн
     </h2>
-    <h3 class="hero__subtitle">
-      Купить тур легче, чем вы думаете.
+    <h3 class="main-descr descr--center">
+      Купить тур легче, чем вы думаете
     </h3>
     <!-- --------------------------------- Search-form ----------------------------------- -->
     <section class="search-form">
@@ -396,8 +398,8 @@
 
         <div class="swiper-slide slide slide--1">
               <div class="slide__content">
-                <h1 class="main-title main-title--inter">Бахрейн</h1>
-                <p class="main-descr main-descr--inter">
+                <h1 class="title title--inter">Бахрейн</h1>
+                <p class="descr descr--inter">
                   Настоящий арабский колорит
                 </p>
                 <div class="slide__btns">
@@ -408,8 +410,8 @@
 
         <div class="swiper-slide slide slide--2">
               <div class="slide__content">
-                <h1 class="main-title main-title--inter">Необыкновенный Стамбул</h1>
-                <p class="main-descr main-descr--inter">
+                <h1 class="title title--inter">Необыкновенный Стамбул</h1>
+                <p class="descr descr--inter">
                   Познакомтесь с самым колоритным городом Турции
                 </p>
                 <div class="slide__btns">
@@ -420,8 +422,8 @@
 
         <div class="swiper-slide slide slide--3">
             <div class="slide__content">
-              <h1 class="main-title main-title--home">Популярные отели</h1>
-              <p class="main-descr main-descr--home">
+              <h1 class="title title--home">Популярные отели</h1>
+              <p class="descr descr--home">
                 для отдыха в России
               </p>
               <div class="slide__btns">
@@ -436,6 +438,56 @@
       <button class="swiper-button-prev"></button>
       <button class="swiper-button-next"></button>
     </div>
+  </div>
+</section>
+
+      <section class="advantages">
+  <div class="container">
+    <h2 class="title title--adv title--center">Преимущества бронирования онлайн</h2>
+    <p class="descr descr--center">Экономьте время и деньги, выбирая лучшее</p>
+    <ul class="list-reset advantages__list">
+      <li class="advantages__item">
+        <span class="advantages__icon advantages__icon--speed"></span>
+        <div class="advantages__text-block">
+          <h3 class="advantages__subtitle">Быстро</h3>
+          <p class="advantages__descr">
+            Никаких поездок в офис и ожиданий в очередях: онлайн-бронирование доступно в любое время и занимает считаные
+            минуты.
+          </p>
+        </div>
+      </li>
+      <li class="advantages__item">
+        <span class="advantages__icon advantages__icon--comfort advantages__icon-right"></span>
+        <div class="advantages__text-block advantages__text-block-right">
+          <h3 class="advantages__subtitle">Удобно</h3>
+          <p class="advantages__descr">
+            Вы можете самостоятельно сравнивнить цены, отели и условия, прочитать отзывы туристов и выбирать оптимальное
+            предложение.
+          </p>
+        </div>
+      </li>
+      <li class="advantages__item">
+        <span class="advantages__icon advantages__icon--safety"></span>
+        <div class="advantages__text-block">
+          <h3 class="advantages__subtitle">Безопасно</h3>
+          <p class="advantages__descr">
+            Traveler — надёжный туроператор с безупречной репутацией, а все банковские операции и онлайн-платежи на
+            сайте
+            абсолютно защищены.
+          </p>
+        </div>
+      </li>
+      <li class="advantages__item">
+        <span class="advantages__icon advantages__icon--profit advantages__icon-right"></span>
+        <div class="advantages__text-block advantages__text-block-right">
+          <h3 class="advantages__subtitle">Выгодно</h3>
+          <p class="advantages__descr">
+            Все спецпредложения, акции и горящие туры отображаются на сайте в реальном времени, их можно отслеживать и
+            сразу выкупать по выгодной цене.
+          </p>
+        </div>
+      </li>
+    </ul>
   </div>
 </section>
 
