add section 'help-form'

--- a/app/index.html
+++ b/app/index.html
@@ -602,8 +602,8 @@
         </div>
         <div class="slideshow">
           <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-276"></div>
-          <div class="slideshow__item" data-position="-552"></div>
+          <div class="slideshow__item" data-position="-290"></div>
+          <div class="slideshow__item" data-position="-580"></div>
         </div>
       </div>
       <div class="small-slider__foofer">
@@ -634,8 +634,8 @@
         </div>
         <div class="slideshow">
           <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-276"></div>
-          <div class="slideshow__item" data-position="-552"></div>
+          <div class="slideshow__item" data-position="-290"></div>
+          <div class="slideshow__item" data-position="-580"></div>
         </div>
       </div>
       <div class="small-slider__foofer">
@@ -666,8 +666,8 @@
         </div>
         <div class="slideshow">
           <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-276"></div>
-          <div class="slideshow__item" data-position="-552"></div>
+          <div class="slideshow__item" data-position="-290"></div>
+          <div class="slideshow__item" data-position="-580"></div>
         </div>
       </div>
       <div class="small-slider__foofer">
@@ -698,8 +698,8 @@
         </div>
         <div class="slideshow">
           <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-276"></div>
-          <div class="slideshow__item" data-position="-552"></div>
+          <div class="slideshow__item" data-position="-290"></div>
+          <div class="slideshow__item" data-position="-580"></div>
         </div>
       </div>
       <div class="small-slider__foofer">
@@ -730,8 +730,8 @@
         </div>
         <div class="slideshow">
           <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-276"></div>
-          <div class="slideshow__item" data-position="-552"></div>
+          <div class="slideshow__item" data-position="-290"></div>
+          <div class="slideshow__item" data-position="-580"></div>
         </div>
       </div>
       <div class="small-slider__foofer">
@@ -762,8 +762,8 @@
         </div>
         <div class="slideshow">
           <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-276"></div>
-          <div class="slideshow__item" data-position="-552"></div>
+          <div class="slideshow__item" data-position="-290"></div>
+          <div class="slideshow__item" data-position="-580"></div>
         </div>
       </div>
       <div class="small-slider__foofer">
@@ -794,8 +794,8 @@
         </div>
         <div class="slideshow">
           <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-276"></div>
-          <div class="slideshow__item" data-position="-552"></div>
+          <div class="slideshow__item" data-position="-290"></div>
+          <div class="slideshow__item" data-position="-580"></div>
         </div>
       </div>
       <div class="small-slider__foofer">
@@ -826,8 +826,8 @@
         </div>
         <div class="slideshow">
           <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-276"></div>
-          <div class="slideshow__item" data-position="-552"></div>
+          <div class="slideshow__item" data-position="-290"></div>
+          <div class="slideshow__item" data-position="-580"></div>
         </div>
       </div>
       <div class="small-slider__foofer">
@@ -858,8 +858,8 @@
         </div>
         <div class="slideshow">
           <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-276"></div>
-          <div class="slideshow__item" data-position="-552"></div>
+          <div class="slideshow__item" data-position="-290"></div>
+          <div class="slideshow__item" data-position="-580"></div>
         </div>
       </div>
       <div class="small-slider__foofer">
@@ -890,8 +890,8 @@
         </div>
         <div class="slideshow">
           <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-276"></div>
-          <div class="slideshow__item" data-position="-552"></div>
+          <div class="slideshow__item" data-position="-290"></div>
+          <div class="slideshow__item" data-position="-580"></div>
         </div>
       </div>
       <div class="small-slider__foofer">
@@ -922,8 +922,8 @@
         </div>
         <div class="slideshow">
           <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-276"></div>
-          <div class="slideshow__item" data-position="-552"></div>
+          <div class="slideshow__item" data-position="-290"></div>
+          <div class="slideshow__item" data-position="-580"></div>
         </div>
       </div>
       <div class="small-slider__foofer">
@@ -954,8 +954,8 @@
         </div>
         <div class="slideshow">
           <div class="slideshow__item" data-position="0"></div>
-          <div class="slideshow__item" data-position="-276"></div>
-          <div class="slideshow__item" data-position="-552"></div>
+          <div class="slideshow__item" data-position="-290"></div>
+          <div class="slideshow__item" data-position="-580"></div>
         </div>
       </div>
       <div class="small-slider__foofer">
@@ -973,6 +973,27 @@
     </li>
   </ul>
   </div>
+</section>
+
+      <section class="section-help-form section-offset">
+  <div class="container">
+  <div class="section-help-form__container">
+      <h2 class="title title--help-form">Подберите тур с менеджером</h2>
+      <p class="descr descr--help-form">Нужна помощь? Теперь не нужно идти в офис продаж</p>
+      <form action="#" class="help-form form" method="POST" enctype="multipart/form-data">
+          <label class="help-form__field form-field">
+            <input class="form-field__input input" type="text" data-validate-field="name" name="Имя" placeholder="Ваше имя">
+          </label>
+          <label class="help-form__field form-field">
+            <input class="form-field__input input" type="tel" data-validate-field="tel" name="Телефон" placeholder="Номер телефона">
+          </label>
+          <label class="help-form__field form-field">
+            <input class="form-field__input input" type="email" data-validate-field="email" name="Email" placeholder="Ваш email">
+          </label>
+          <button class="help-form__btn btn-reset btn btn--fill button">Отправить</button>
+      </form>
+  </div>
+</div>
 </section>
 
     </main>
