--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
       @include('partials/slider-main.html')
       @include('partials/advantages.html')
       @include('partials/tour-selection.html')
+      @include('partials/help-form.html')
 
     </main>
     @include('partials/footer.html')
