--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       @include('partials/advantages.html')
       @include('partials/tour-selection.html')
       @include('partials/help-form.html')
+      @include('partials/best-feres.html')
 
     </main>
     @include('partials/footer.html')
