--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
       @include('partials/advantages.html')
       @include('partials/tour-selection.html')
       @include('partials/help-form.html')
-      @include('partials/best-feres.html')
+      @include('partials/best-fares.html')
+      @include('partials/subscription.html')
 
     </main>
     @include('partials/footer.html')
