fix header and create button up

--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,7 @@
           <a class="header__nav-link" href="#">О компании</a>
 
           <div class="more">
-            <div class="more__dots">…</div>
-            <div class="more__wrapper">
+            <div class="more__dots touch-area">…
               <div class="more__menu">
                 <a href="#" class="more__menu-link"><span>Офисы продаж</span></a>
                 <a href="#" class="more__menu-link"><span>Вход для агентов</span></a>
@@ -78,18 +77,7 @@
     <nav class="nav">
       <ul class="nav__items nav__list list-reset">
         <li class="nav__item">
-          <div class="tours">
-            <a href="index.html" class="nav__link">Туры
-              <span class="nav__link--chevron"></span>
-            </a>
-            <div class="tours__wrapper">
-              <div class="tours__submenu">
-                <a href="#" class="tours__submenu-link"><span>Все туры</span></a>
-                <a href="#" class="tours__submenu-link"><span>Авто туры</span></a>
-                <a href="#" class="tours__submenu-link"><span>Туры на выходные</span></a>
-              </div>
-            </div>
-          </div>
+            <a href="index.html" class="nav__link">Туры</a>
         </li>
         <li class="nav__item">
           <a href="services.html" class="nav__link">Отели</a>
@@ -1355,6 +1343,14 @@
 
     </main>
     <footer class="footer">
+  <a href="#page" class="to-top">
+    <span class="to-top__icon">
+      <svg>
+        <use xlink:href="img/sprite.svg#to-top"></use>
+      </svg>
+    </span>
+    <span class="to-top__text">вверх</span>
+  </a>
   <div class="container">
     <div class="footer-top">
       <span class="footer-top__link">
@@ -1366,8 +1362,8 @@
       </span>
       <span class="footer-top__account">
         <svg class="footer-top__user-icon" aria-hidden="true">
-            <use xlink:href="img/sprite.svg#user"></use>
-          </svg>
+          <use xlink:href="img/sprite.svg#user"></use>
+        </svg>
         <span class="footer-top__caption">Личный кабинет</span>
       </span>
     </div>
@@ -1411,8 +1407,8 @@
         <div class="footer-info__block">
           <div class="footer-info__contact">
             <h3 class="footer-info__title">Контакты</h3>
-            <a href="tel:78007755000">8 800 775 50 00</a>
-            <a href="tel:78007755000">8 800 775 50 10</a>
+            <a href="tel:78007755000">8 800 475 50 00</a>
+            <a href="tel:78007755000">8 800 475 50 10</a>
           </div>
           <div class="footer-info__social">
             <h3 class="footer-info__title">Мы в соцсетях</h3>
