created modals windows and fix form

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       @include('partials/help-form.html')
       @include('partials/best-fares.html')
       @include('partials/subscription.html')
-
+      @include('partials/modals.html')
     </main>
     @include('partials/footer.html')
   </div>
