--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
           <span class="contact-link__value">8(800) 999-9999</span>
         </a>
         <div class="account">
-          <span class="account__link">
+          <span class="account__link" data-graph-animation="custom" data-graph-path="first">
             <svg class="account__icon" aria-hidden="true">
               <use xlink:href="img/sprite.svg#user"></use>
             </svg>
@@ -108,7 +108,7 @@
           </a>
         </div>
         <div class="account">
-          <span class="account__link">
+          <span class="account__link" data-graph-animation="custom" data-graph-path="first">
             <svg class="account__icon" aria-hidden="true">
               <use xlink:href="img/sprite.svg#user"></use>
             </svg>
@@ -964,16 +964,16 @@
       <h2 class="title title--help-form">Подберите тур с менеджером</h2>
       <p class="descr descr--help-form">Нужна помощь? Теперь не нужно идти в офис продаж</p>
       <form action="#" class="help-form" method="POST" enctype="multipart/form-data">
-        <label class="form-field">
-          <input class="help-form__input form-field__input" type="text" data-validate-field="name" name="Имя"
+        <label class="form-field help-form__field">
+          <input class="form-field__input" type="text" data-validate-field="name" name="Имя"
             placeholder="Ваше имя">
         </label>
-        <label class="form-field">
-          <input class="help-form__input form-field__input" type="tel" data-validate-field="tel" name="Телефон"
+        <label class="form-field help-form__field">
+          <input class="form-field__input" type="tel" data-validate-field="tel" name="Телефон"
             placeholder="Номер телефона">
         </label>
-        <label class="form-field">
-          <input class="help-form__input form-field__input" type="email" data-validate-field="email" name="Email"
+        <label class="form-field help-form__field">
+          <input class="form-field__input" type="email" data-validate-field="email" name="Email"
             placeholder="Ваш email">
         </label>
         <button class="help-form__btn btn-reset btn btn--fill" type="submit">Отправить</button>
@@ -1341,6 +1341,30 @@
   </div>
 </section>
 
+      <div class="modal">
+  <div class="modal__container site-modal" role="dialog" aria-modal="true" data-graph-target="first">
+    <button class="btn-reset modal__close" aria-label="Закрыть модальное окно"></button>
+    <div class="modal-content">
+      <h2 class="site-modal__title">Вход в личный кабинет</h2>
+      <form action="#" class="site-modal__form form-1">
+        <label class="form-field form-field--gray site-modal__field">
+          <input type="email" name="email" required placeholder="Ваш email" class="form-field__input" data-validate-field="email">
+        </label>
+
+        <label class="form-field form-field--gray site-modal__field">
+          <input type="password" name="password" placeholder="Пароль" class="form-field__input" data-validate-field="password">
+        </label>
+
+        <button class="site-modal__btn btn btn-reset btn--fill" type="submit">Войти</button>
+      </form>
+      <div class="site-modal__footer">
+        <a href="#" target="_blank" class="site-modal__link"><span>Регистрация</span></a>
+        <a href="#" target="_blank" class="site-modal__link"><span>Напомнить пароль</span></a>
+      </div>
+    </div>
+  </div>
+</div>
+
     </main>
     <footer class="footer">
   <a href="#page" class="to-top">
@@ -1360,7 +1384,7 @@
           </svg>
         </a>
       </span>
-      <span class="footer-top__account">
+      <span class="footer-top__account" data-graph-animation="custom" data-graph-path="first">
         <svg class="footer-top__user-icon" aria-hidden="true">
           <use xlink:href="img/sprite.svg#user"></use>
         </svg>
